# ovp-new

./: .env.example  CONTRIBUTING.md  Cargo.toml  LICENSE  blueprint.md  blueprint.tex  build.rs  config.toml  folder_structureOVP.txt
src/: lib.rs  main.rs
src/api/: api_epoch.rs  errors.rs  handlers.rs  middleware.rs  mod.rs  routes.rs  stats.rs  validation.rs
src/core/: mod.rs
src/core/conversion/: conversion_boc.rs  conversion_cell.rs  conversion_client.rs  conversion_common.rs  conversion_error.rs  conversion_inter.rs  conversion_node.rs  conversion_root.rs  conversion_tree.rs  conversion_zkp.rs  mod.rs
src/core/error/: errors.rs  mod.rs
src/core/hierarchy/: mod.rs
src/core/hierarchy/client/: mod.rs
src/core/hierarchy/client/channel/: channel_contract.rs  mod.rs
src/core/hierarchy/client/wallet_extension/: balance.rs  channel_manager.rs  client_proof_exporter.rs  grouping.rs  mod.rs  sparse_merkle_tree_wasm.rs  state_tracking.rs  token_wallet.rs  transactions_manager.rs  tree_manager.rs  user.rs  wallet_extension_contract.rs  wallet_extension_types.rs  wallet_manager.rs  wallet_utils.rs  zkp_transaction.rs
src/core/hierarchy/root/: audit_interface.rs  epoch.rs  global_state.rs  global_tree_manager.rs  intermediate_verifier.rs  mod.rs  root_contract.rs  settlement.rs  sparse_merkle_tree_r.rs  verification.rs
src/core/overpassing/: bitcoin_overpass.rs  mod.rs
src/core/state/: consistency_checker.rs  mod.rs  proof_orchestration.rs  state_machine.rs  state_sync.rs
src/core/state/boc/: builder.rs  cell.rs  cell_serialization.rs  mod.rs  parser.rs  verifiy_boc.rs
src/core/state/proof/: generator.rs  mod.rs  plonky2_state.rs  verification.rs
src/core/storage_node/: mod.rs  storage_node.rs  storage_node_contract.rs
src/core/storage_node/attest/: challenge.rs  mod.rs  response.rs  storage_and_retreival.rs
src/core/storage_node/battery/: charging.rs  mod.rs  monitoring.rs  rewards.rs
src/core/storage_node/epidemic/: mod.rs  overlap.rs  propagation.rs  sync.rs
src/core/storage_node/replication/: consistency.rs  distribution.rs  mod.rs  verification.rs
src/core/tokens/: bitcoin_integration.rs  mod.rs  token_oc_data.rs  token_types.rs
src/core/types/: boc.rs  mod.rs  ovp_ops.rs  ovp_types.rs
src/core/validation/: mod.rs  validation_boc.rs  validation_cell.rs  validation_common.rs  validation_inter.rs  validation_node.rs
src/core/zkp/: circuit_builder.rs  mod.rs  plonky2.rs  proof.rs  zkp.rs
src/core/zkps/: circuit_builder.rs  mod.rs  plonky2.rs  proof.rs  zkp.rs  zkp_interface.rs
src/logging/: configuration.rs  formatters.rs  mod.rs
src/metrics/: collection.rs  mod.rs  reporting.rs  storage.rs
src/network/: discovery.rs  messages.rs  mod.rs  network_interface.rs  peer.rs  protocol.rs  sync_manager.rs  transport.rs
src/wasm/: bindings_wasm.rs  conversion_wasm.rs  mod.rs  runtime_wasm.rs  types_wasm.rs
