[package]
name = "overpass-rs"
version = "0.1.0"
edition = "2021"
authors = ["Cryptskii"]
description = "A decentralized application that allows users to create and manage channels on the TON blockchain."
repository = "https://github.com/ton-connect/overpass-channels"
license = "MIT"
readme = "README.md"
exclude = ["/client"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["cell_counter", "console_error_panic_hook"]
native = ["mio", "tokio", "sqlx", "openssl", "sodiumoxide", "tonlib", "ton_types", "async-std" ]
cell_counter = []
export_key = []

[dependencies]
# Core Dependencies
anyhow = "1.0.67"
warp = "0.3.5"
simplelog = "0.12.1"
async-std = { version = "1.12.0", optional = true }
diesel_migrations = "2.1.0"
subtle = "2.5.0"
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-serialize = "0.5.0"
serde = { version = "1.0.192", features = ["derive"] }
nix = { version = "0.29.0", features = ["signal"] }
base64 = "0.22.1"
byteorder = "1.4.3"
zeroize = "1.8.1"
blake2 = "0.9.2"
jsonwebtoken = "9.3.0"
serde_json = "1.0.108"
libc = "0.2"
thiserror = "1.0.37"
failure = "0.1.7"
num-derive = "0.4.2"
num-traits = "0.2.15"
num-bigint = { version = "0.4", features = ["rand"] }
lazy_static = "1.4.0"
itertools = "0.13.0"
serde_arrays = "0.1"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-test = "0.3.0"
wasmcov = "0.2"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.3.4", features = ["v4", "serde"] }


# Crypto-related Dependencies
aes = { version = "0.7.5", features = ["force-soft"] }

aes-gcm = "0.10.3"
sha2 = "0.10.7"
sha3 = "0.10.7"
hex = "0.4.3"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
blst = { version = "0.3.5", features = ["portable"] }
secp256k1 = { version = "0.30.0", features = ["std"] }
x25519-dalek = "2.0.0"
ed25519-dalek = { version = "2.1.0", features = ["hazmat", "rand_core", "serde"] }
curve25519-dalek = "4.1.2"

# Async and Futures
futures = "0.3"
async-trait = "0.1"


# WebAssembly Dependencies
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
web-sys = { version = "0.3.72", features = ["Window", "Storage", "Performance", "console", "WebSocket", "MessageEvent", "Url", "Blob"] }
wasm-bindgen-futures = "0.4.33"
console_error_panic_hook = { version = "0.1.7", optional = true }

# Other Utilities
smallvec = { version = "1.10", features = ["const_new", "union", "write"] }
parking_lot = "0.12.1"
plonky2 = { git = "https://github.com/mir-protocol/plonky2", branch = "main", features = ["std"] }
plonky2_field = { git = "https://github.com/mir-protocol/plonky2", package = "plonky2_field", branch = "main" }
array-init = "2.0.0"
merkle = "1.11.0"
bincode = "1.3.3"
strum = "0.26.3"
strum_macros = "0.26.4"
metrics = "0.24.0"
lru_time_cache = "0.11.11"
crc = "3.0"
ed25519 = "2.2"
env_logger = "0.11.5"
colored = "2.0.0"
rayon = "1.5.3"
derive_more = { version = "1.0.0", features = ["full"] }

# Optional dependencies for native feature
mio = { version = "1.0.2", optional = true, features = ["os-poll", "net"] }
openssl = { version = "0.10", optional = true, features = ["vendored"] }
sodiumoxide = { version = "0.2.5", optional = true }
tokio = { version = "1.40", optional = true, features = ["full"] }
sqlx = { version = "0.8.2", optional = true, default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
tonlib = { version = "0.17.6", optional = true }
ton_types = { path = "/Users/cryptskii/ever-types", optional = true }

# Logging and Tracing
log = { version = "0.4.19", features = ["std"] }
tracing = "0.1"
tracing-wasm = "0.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }




[dev-dependencies]
wasm-bindgen-test = "0.3.0"


[build-dependencies]
cmake = "0.1"

[profile.release]
opt-level = "z" # Optimized for size
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]


